--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato&family=Lobster&family=Montserrat&family=Open+Sans&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/estilos.css"> "><link rel = "preconnect" href = "https://fonts.gstatic.com">
+  <link rel="stylesheet" href="css/estilos.css"> <link rel = "preconnect" href = "https://fonts.gstatic.com">
 </head>
 <body>
     <div class="btn-whatsapp">
